--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <!-- Judul -->
-        <h1>Kabupaten Boyolali</h1>
+        <h1 style="color: blue;">Kabupaten Boyolali</h1>
 
         <!-- Sub Judul -->
         <h3>Boyolali</h3>
