menambahkan beberapa baris html dan css pada acara 2

--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- struktur dasar HTML -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- menyesuaikan tampilan website dengan layar -->
     <title>Acara 1 | HTML CSS</title>
+
+    <link rel="stylesheet" href="app.css">
+    <style>
+
+    </style>
 </head>
 <body>
+    <!-- bagian utama script -->
     <main>
         <!-- Judul -->
-        <h1 style="color: blue;">Kabupaten Boyolali</h1>
+        <h1 id="p1">Kabupaten Boyolali</h1>
 
         <!-- Sub Judul -->
         <h3>Boyolali</h3>
         <hr>
         <!-- Deskripsi -->
-        <p>Kabupaten Boyolali (bahasa Jawa: Hanacaraka: ꦧꦺꦴꦪꦭꦭꦶ, Pegon: بويالالي translit. Boyålali) adalah sebuah wilayah kabupaten yang terletak di Provinsi Jawa Tengah, Indonesia. Ibu kotanya adalah Kecamatan Boyolali. Kabupaten ini terletak sekitar 25 km sebelah barat Kota Surakarta.</p>
-        <p>Kabupaten Boyolali berbatasan dengan Kabupaten Semarang dan Kabupaten Grobogan di utara; Kabupaten Sragen, Kabupaten Karanganyar, Kabupaten Sukoharjo, dan Kota Surakarta di timur; Kabupaten Klaten dan Kabupaten Sleman (Daerah Istimewa Yogyakarta) di selatan; serta Kabupaten Magelang dan Kabupaten Semarang di barat. Kabupaten ini termasuk kawasan Solo Raya.</p>
+        <p id= "p1">Kabupaten Boyolali (bahasa Jawa: Hanacaraka: ꦧꦺꦴꦪꦭꦭꦶ, Pegon: بويالالي translit. Boyålali) adalah sebuah wilayah kabupaten yang terletak di Provinsi Jawa Tengah, Indonesia. Ibu kotanya adalah Kecamatan Boyolali. Kabupaten ini terletak sekitar 25 km sebelah barat Kota Surakarta.</p>
+        <p class="p2">Kabupaten Boyolali berbatasan dengan Kabupaten Semarang dan Kabupaten Grobogan di utara; Kabupaten Sragen, Kabupaten Karanganyar, Kabupaten Sukoharjo, dan Kota Surakarta di timur; Kabupaten Klaten dan Kabupaten Sleman (Daerah Istimewa Yogyakarta) di selatan; serta Kabupaten Magelang dan Kabupaten Semarang di barat. Kabupaten ini termasuk kawasan Solo Raya.</p>
         <hr>
         <!-- Table Jumlah penduduk -->
          <table>
@@ -43,6 +51,8 @@
 
          <!-- List Kecamatan -->
           <h4>Kecamatan</h4>
+          
+          <!-- ordered list (list bernomor) -->
           <ol>
 <li>            Ampel</li>
 <li>            Andong</li>
@@ -68,6 +78,20 @@
 <li>            Wonosegoro</li>
 
           </ol>
-        </main>
+
+<hr>
+
+<a href="https://jatengprov.go.id/kabkota/pemerintah-kabupaten-boyolali/" target="_blank" rel="noopener noreferrer" title="klik">Website Kabupaten Boyolali</a>
+
+<hr>
+
+<img src="images/700px-Boyolali_downtown.jpg" alt=""
+height="200px" title="Kabupaten Boyolali">
+
+<hr>
+
+<!-- iframe -->
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2q7VMdKM2W4?si=j-If2VyCSQa1Uzb6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</main>
 </body>
 </html>
